# cpp20

./: .gitignore  README.md
cpp20/: CMakeLists.txt  abbreviatedfunctiontemplates.cpp  constrainedAutoReturnType.cpp
